--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="strings.c">
+    <ClCompile Include="..\..\..\..\..\Downloads\mainResposta.c">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
