--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
@@ -15,8 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Downloads\mainResposta.c">
+    <ClCompile Include="arquivos.c">
       <Filter>Resource Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="entrada.txt" />
   </ItemGroup>
 </Project>
