Adicionando algumas partes teoricas iniciando lista de exercicios sobre structs.

--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
@@ -19,11 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="arquivos.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="entrada0.txt" />
-    <Text Include="entrada1.txt" />
+    <ClCompile Include="structs.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
