--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="exercicio00_arqBin.c" />
+    <ClCompile Include="lst_encadeada_teoria01.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
