--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="exercicio02_revisaoG2.c" />
+    <ClCompile Include="exercicio04_lst.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
