--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="exercicio02_revisaoG2.c">
+    <ClCompile Include="exercicio04_lst.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
