add exercico de revisao teoria

--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="entrada_exercicio05_G2.txt" />
+    <ClCompile Include="revisao_teoria_struct_lst_arquivo.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
