--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="entrada_exercicio05_G2.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
+    <ClCompile Include="revisao_teoria_struct_lst_arquivo.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
