--- a/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
+++ b/Ambiente de Teste de Programas/Ambiente de Teste de Programas.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="P2_2024_1.c">
+    <ClCompile Include="exercicio_Grafo_dirigido.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
